<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="at_roundabout1">traffic circle</string>
    <string name="at_roundabout2">roundabout</string>
    <string name="continue_onto">continue onto</string>
    <string name="continue_straight">continue straight</string>
    <string name="exit">exit</string>
    <string name="gps">gps...</string>
    <string name="head">head</string>
    <string name="head_east" />
    <string name="head_north" />
    <string name="head_northeast" />
    <string name="head_northwest" />
    <string name="head_south" />
    <string name="head_southeast" />
    <string name="head_southwest" />
    <string name="head_west" />
    <string name="language_supported">false</string>
    <string name="left">left</string>
    <string name="left_at_the_fork">left at the fork</string>
    <string name="merge_onto">merge onto</string>
    <string name="navigation_canceled">Navigation Canceled</string>
    <string name="on_the_left">on the left</string>
    <string name="on_the_right">on the right</string>
    <string name="right">right</string>
    <string name="right_at_the_fork">right at the fork</string>
    <string name="roundabout_1">take the 1st</string>
    <string name="roundabout_2">take the 2nd</string>
    <string name="roundabout_3">take the 3rd</string>
    <string name="roundabout_4">take the 4th</string>
    <string name="roundabout_5">take the 5th</string>
    <string name="action_destination">Destinations</string>
    <string name="action_download_watchapp">Download watch app</string>
    <string name="action_email_logcat">Email LogCat</string>
    <string name="action_goto_notification">Goto Notification access</string>
    <string name="action_goto_write">Goto Write Settings access</string>
    <string name="action_install_watchapp">Install watch app</string>
    <string name="action_restore_purchase">Restore License</string>
    <string name="action_settings">Settings</string>
    <string name="advanced_settings_title">Advanced Settings</string>
    <string name="config_buzz_on_alert_default">true</string>
    <string name="config_buzz_on_alert_enabled">config_buzz_on_alert_enabled</string>
    <string name="config_buzz_on_alert_summary">Vibrate on watch on new alert</string>
    <string name="config_buzz_on_alert_title">Vibrate on alert</string>
    <string name="config_key_alert_default">true</string>
    <string name="config_key_alert_enabled">config_key_alert_enabled</string>
    <string name="config_key_close_when_done_default">false</string>
    <string name="config_key_close_when_done_enabled">config_key_close_when_done_enabled</string>
    <string name="config_key_close_when_done_summary">Automatically close NavMe when done</string>
    <string name="config_key_close_when_done_title">Close when done</string>
    <string name="config_key_default_1_alert">config_key_default_1_alert</string>
    <string name="config_key_default_2_alert">config_key_default_2_alert</string>
    <string name="config_key_disable_alert_if_google_active">config_key_disable_alert_if_google_active</string>
    <string name="config_key_disable_alert_if_google_active_default">false</string>
    <string name="config_key_disable_on_maps_summary">Disable alerts if google maps is active</string>
    <string name="config_key_disable_on_maps_title">Disable Alert if Maps active</string>
    <string name="config_key_generic_alert">config_key_generic_alert</string>
    <string name="config_key_launch_on_alert_default">true</string>
    <string name="config_key_launch_on_alert_enabled">config_key_launch_on_alert_enabled</string>
    <string name="config_key_launch_on_alert_summary">Automatically starts NavMe if not already started</string>
    <string name="config_key_launch_on_alert_title">Launch NavMe on alert</string>
    <string name="config_key_left_1_alert">config_key_left_1_alert</string>
    <string name="config_key_left_2_alert">config_key_left_2_alert</string>
    <string name="config_key_notify_new_direction_default">false</string>
    <string name="config_key_notify_new_direction_enabled">config_key_notify_new_direction_enabled</string>
    <string name="config_key_notify_new_direction_summary">Alert when a new direction is detected</string>
    <string name="config_key_notify_new_direction_title">Alert on new instruction</string>
    <string name="config_key_notify_on_start_default">true</string>
    <string name="config_key_notify_on_start_enabled">config_key_notify_on_start_enabled</string>
    <string name="config_key_notify_on_start_summary">Alert when navigation is initially started</string>
    <string name="config_key_notify_on_start_title">Alert on start</string>
    <string name="config_key_quick_lock_default">false</string>
    <string name="config_key_quick_lock_enabled">config_key_quick_lock_enabled</string>
    <string name="config_key_quick_lock_summary">Attempt to quick lock screen when starting Navigation. On some devices this may not work such as Nexus which only allow 15 seconds</string>
    <string name="config_key_quick_lock_title">Quick Lock screen on start</string>
    <string name="config_key_right_1_alert">config_key_right_1_alert</string>
    <string name="config_key_right_2_alert">config_key_right_2_alert</string>
    <string name="config_key_smart_flash_default">false</string>
    <string name="config_key_smart_flash_enabled">config_key_smart_flash_enabled</string>
    <string name="config_key_smart_flash_summary">Disable flashing from external application like Music Boss if navigation is not running</string>
    <string name="config_key_smart_flash_title">Smart Flash</string>
    <string name="default_first_alert_summary">Default alert to use initally</string>
    <string name="default_first_alert_title">Default 1st alert</string>
    <string name="default_second_alert_summary">Default alert to use when approching the turn</string>
    <string name="default_second_alert_title">Default 2nd alert</string>
    <string name="enable_notification_summary">If enabled will alert when an interesting event occurs</string>
    <string name="enable_notification_title">Enable Alerts</string>
    <string name="generic_alert_summary">Alert to use for non direction alerts</string>
    <string name="generic_alert_title">Generic Alerting</string>
    <string name="left_first_alert_summary">Alert to use initally on left turns</string>
    <string name="left_first_alert_title">1st alert for left turns</string>
    <string name="left_second_alert_summary">Alert to use when approching the left turn</string>
    <string name="left_second_alert_title">2nd alert for left turns</string>
    <string name="notification_settings_title">Alert Settings</string>
    <string name="right_first_alert_summary">Alert to use initally on right turns</string>
    <string name="right_first_alert_title">1st alert for right turns</string>
    <string name="right_second_alert_summary">Alert to use when approching the right turn</string>
    <string name="right_second_alert_title">2nd alert for right turns</string>
</resources>