<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notification_settings_title">
        <CheckBoxPreference android:title="@string/enable_notification_title" android:key="@string/config_key_alert_enabled" android:summary="@string/enable_notification_summary" android:defaultValue="@string/config_key_alert_default" />
        <CheckBoxPreference android:title="@string/config_buzz_on_alert_title" android:key="@string/config_buzz_on_alert_enabled" android:summary="@string/config_buzz_on_alert_summary" android:dependency="config_key_alert_enabled" android:defaultValue="@string/config_buzz_on_alert_default" />
        <CheckBoxPreference android:title="@string/config_key_launch_on_alert_title" android:key="@string/config_key_launch_on_alert_enabled" android:summary="@string/config_key_launch_on_alert_summary" android:dependency="config_key_alert_enabled" android:defaultValue="@string/config_key_launch_on_alert_default" />
        <CheckBoxPreference android:title="@string/config_key_notify_new_direction_title" android:key="@string/config_key_notify_new_direction_enabled" android:summary="@string/config_key_notify_new_direction_summary" android:dependency="config_key_alert_enabled" android:defaultValue="@string/config_key_notify_new_direction_default" />
        <CheckBoxPreference android:title="@string/config_key_disable_on_maps_title" android:key="@string/config_key_disable_alert_if_google_active" android:summary="@string/config_key_disable_on_maps_summary" android:dependency="config_key_alert_enabled" android:defaultValue="@string/config_key_disable_alert_if_google_active_default" />
        <CheckBoxPreference android:title="@string/config_key_notify_on_start_title" android:key="@string/config_key_notify_on_start_enabled" android:summary="@string/config_key_notify_on_start_summary" android:dependency="config_key_alert_enabled" android:defaultValue="@string/config_key_notify_on_start_default" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced_settings_title">
        <CheckBoxPreference android:title="@string/config_key_close_when_done_title" android:key="@string/config_key_close_when_done_enabled" android:summary="@string/config_key_close_when_done_summary" android:defaultValue="@string/config_key_close_when_done_default" />
        <CheckBoxPreference android:title="@string/config_key_smart_flash_title" android:key="@string/config_key_smart_flash_enabled" android:summary="@string/config_key_smart_flash_summary" android:defaultValue="@string/config_key_smart_flash_default" />
        <CheckBoxPreference android:title="@string/config_key_quick_lock_title" android:key="@string/config_key_quick_lock_enabled" android:summary="@string/config_key_quick_lock_summary" android:defaultValue="@string/config_key_quick_lock_default" />
        <ListPreference android:entries="@array/alert_entries" android:title="@string/generic_alert_title" android:key="@string/config_key_generic_alert" android:summary="@string/generic_alert_summary" android:defaultValue="0" android:entryValues="@array/alert_entries_values" />
        <ListPreference android:entries="@array/alert_entries" android:title="@string/default_first_alert_title" android:key="@string/config_key_default_1_alert" android:summary="@string/default_first_alert_summary" android:defaultValue="0" android:entryValues="@array/alert_entries_values" />
        <ListPreference android:entries="@array/alert_entries" android:title="@string/default_second_alert_title" android:key="@string/config_key_default_2_alert" android:summary="@string/default_second_alert_summary" android:defaultValue="0" android:entryValues="@array/alert_entries_values" />
        <ListPreference android:entries="@array/alert_entries" android:title="@string/left_first_alert_title" android:key="@string/config_key_left_1_alert" android:summary="@string/left_first_alert_summary" android:defaultValue="3" android:entryValues="@array/alert_entries_values" />
        <ListPreference android:entries="@array/alert_entries" android:title="@string/left_second_alert_title" android:key="@string/config_key_left_2_alert" android:summary="@string/left_second_alert_summary" android:defaultValue="3" android:entryValues="@array/alert_entries_values" />
        <ListPreference android:entries="@array/alert_entries" android:title="@string/right_first_alert_title" android:key="@string/config_key_right_1_alert" android:summary="@string/right_first_alert_summary" android:defaultValue="2" android:entryValues="@array/alert_entries_values" />
        <ListPreference android:entries="@array/alert_entries" android:title="@string/right_second_alert_title" android:key="@string/config_key_right_2_alert" android:summary="@string/right_second_alert_summary" android:defaultValue="2" android:entryValues="@array/alert_entries_values" />
    </PreferenceCategory>
</PreferenceScreen>